--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "new": "node scripts/create-component.js",
     "sync": "node scripts/sync-tokens.js",
     "serve": "node server.mjs",
+    "setup:figma": "node scripts/setup-figma-webhook.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
