--- a/.github/token-sync.yml
+++ b/.github/token-sync.yml
@@ -2,10 +2,10 @@ name: Auto-sync Figma Tokens
 
 on:
   repository_dispatch:
-    types: [figma-tokens-update]
+    types: [figma-tokens-update, tokens-updated]
   push:
     paths:
-      - 'packages/tokens/**/*.json'
+      - 'tokens/**/*.json'
     branches: [production]
   workflow_dispatch:
     inputs:
@@ -22,6 +22,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -38,20 +39,25 @@ jobs:
       - name: Check for changes
         id: changes
         run: |
-          git diff --quiet site/dist/ || echo "changed=true" >> $GITHUB_OUTPUT
+          git diff --quiet styles/tokens.css utils/tokens.js || echo "changed=true" >> $GITHUB_OUTPUT
 
       - name: Commit and push changes
         if: steps.changes.outputs.changed == 'true'
         run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git add site/dist/
-          git commit -m "í¾¨ Auto-update design tokens from Figma"
+          git config --local user.email "figma-tokens@mindengine.dev"
+          git config --local user.name "Figma Token Sync"
+          git add styles/tokens.css styles/tokens.dark.css utils/tokens.js
+          git commit -m "ðŸŽ¨ Auto-update design tokens from Figma [skip ci]"
           git push
 
+      - name: Build and Deploy to GitHub Pages
+        if: steps.changes.outputs.changed == 'true'
+        run: |
+          npm run build
+        
       - name: Deploy to GitHub Pages
         if: steps.changes.outputs.changed == 'true'
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./site
+          publish_dir: ./dist
