--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "build": "npm run tokens:build && vite build",
     "new": "node scripts/create-component.js",
     "setup:figma": "node scripts/setup-figma-webhook.js",
-    "shoelace:scaffold": "node scripts/scaffold-shoelace-components.js"
+    "shoelace:scaffold": "node scripts/scaffold-shoelace-components.js",
+    "minify:html": "html-minifier-terser --collapse-whitespace --remove-comments --minify-css true --minify-js true -o dist/index.html src/index.html"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
     "chokidar": "^4.0.3",
     "cssnano": "^6.1.2",
+    "html-minifier-terser": "^7.2.0",
     "postcss": "^8.5.6",
     "postcss-cli": "^11.0.1",
+    "prettier": "^3.6.2",
     "style-dictionary": "^4.0.1",
     "vite": "^7.1.7"
   },
