Update commit message

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,11 @@
 {
-  "[html]": {
-    "editor.formatOnSave": false
-  }
+  "singleAttributePerLine": false,
+  "overrides": [
+    {
+      "files": ["*.vue", "*.html"],
+      "options": {
+        "printWidth": 300
+      }
+    }
+  ]
 }
