--- a/config/.prettierrc
+++ b/config/.prettierrc
@@ -7,5 +7,11 @@
         "printWidth": 300
       }
     }
-  ]
+  ],
+  "printWidth": 500,
+  "arrowParens": "always",
+  "semi": true,
+  "tabWidth": 2,
+  "htmlWhitespaceSensitivity": "ignore",
 }
+
