--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "vite": "^7.1.7"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^7.0.1",
     "@picocss/pico": "^2.1.1",
     "@shoelace-style/shoelace": "^2.20.1",
     "alpinejs": "^3.15.0",
