--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@shoelace-style/shoelace": "^2.20.1",
     "alpinejs": "^3.15.0",
     "chart.js": "^4.5.0",
-    "htmx.org": "^1.9.12"
+    "htmx.org": "^1.9.12",
+    "tailwindcss": "^4.1.13"
   }
 }
